fixed styling on mobile

--- a/styles/events.scss
+++ b/styles/events.scss
@@ -5,4 +5,5 @@ fa-events {
     flex-direction: column;
     flex-grow: 1;
     width: fit-content;
+    max-width: 90%;
 }
